saucer-bindings/include/saucer/webview.h

    enum SAUCER_WEB_EVENT
    {
        SAUCER_WEB_EVENT_DOM_READY,
        SAUCER_WEB_EVENT_NAVIGATED,
        SAUCER_WEB_EVENT_NAVIGATE,
        SAUCER_WEB_EVENT_FAVICON,
        SAUCER_WEB_EVENT_TITLE,
        SAUCER_WEB_EVENT_LOAD,
    };
    enum SAUCER_STATE
    {
        SAUCER_STATE_STARTED,
        SAUCER_STATE_FINISHED,
    };
    enum SAUCER_LAUNCH
    {
        SAUCER_LAUNCH_SYNC,
        SAUCER_LAUNCH_ASYNC,
    };
    struct saucer_embedded_file;
    /*[[sc::requires_free]]*/ SAUCER_EXPORT saucer_embedded_file *saucer_embed(saucer_stash *content, const char *mime);
    SAUCER_EXPORT void saucer_embed_free(saucer_embedded_file *);
    /*[[sc::requires_free]]*/ SAUCER_EXPORT saucer_handle *saucer_new(saucer_preferences *prefs);
    SAUCER_EXPORT void saucer_free(saucer_handle *);
    typedef bool (*saucer_on_message)(const char *);
    SAUCER_EXPORT void saucer_webview_on_message(saucer_handle *, saucer_on_message callback);
    typedef bool (*saucer_on_message_with_arg)(const char *, void *);
    SAUCER_EXPORT void saucer_webview_on_message_with_arg(saucer_handle *, saucer_on_message_with_arg callback,
                                                          void *arg);
    /*[[sc::requires_free]]*/ SAUCER_EXPORT saucer_icon *saucer_webview_favicon(saucer_handle *);
    /*[[sc::requires_free]]*/ SAUCER_EXPORT char *saucer_webview_page_title(saucer_handle *);
    SAUCER_EXPORT bool saucer_webview_dev_tools(saucer_handle *);
    /*[[sc::requires_free]]*/ SAUCER_EXPORT char *saucer_webview_url(saucer_handle *);
    SAUCER_EXPORT bool saucer_webview_context_menu(saucer_handle *);
    SAUCER_EXPORT void saucer_webview_background(saucer_handle *, uint8_t *r, uint8_t *g, uint8_t *b, uint8_t *a);
    SAUCER_EXPORT bool saucer_webview_force_dark_mode(saucer_handle *);
    SAUCER_EXPORT void saucer_webview_set_dev_tools(saucer_handle *, bool enabled);
    SAUCER_EXPORT void saucer_webview_set_context_menu(saucer_handle *, bool enabled);
    SAUCER_EXPORT void saucer_webview_set_force_dark_mode(saucer_handle *, bool enabled);
    SAUCER_EXPORT void saucer_webview_set_background(saucer_handle *, uint8_t r, uint8_t g, uint8_t b, uint8_t a);
    SAUCER_EXPORT void saucer_webview_set_file(saucer_handle *, const char *file);
    SAUCER_EXPORT void saucer_webview_set_url(saucer_handle *, const char *url);
    SAUCER_EXPORT void saucer_webview_back(saucer_handle *);
    SAUCER_EXPORT void saucer_webview_forward(saucer_handle *);
    SAUCER_EXPORT void saucer_webview_reload(saucer_handle *);