src/bindings.rs

unsafe extern "C" {
    pub fn saucer_window_click_through(arg1: *mut saucer_handle) -> bool;
}
unsafe extern "C" {
    pub fn saucer_window_title(arg1: *mut saucer_handle) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn saucer_window_size(
        arg1: *mut saucer_handle,
        width: *mut ::std::os::raw::c_int,
        height: *mut ::std::os::raw::c_int
    );
}
unsafe extern "C" {
    pub fn saucer_window_max_size(
        arg1: *mut saucer_handle,
        width: *mut ::std::os::raw::c_int,
        height: *mut ::std::os::raw::c_int
    );
}
unsafe extern "C" {
    pub fn saucer_window_min_size(
        arg1: *mut saucer_handle,
        width: *mut ::std::os::raw::c_int,
        height: *mut ::std::os::raw::c_int
    );
}
unsafe extern "C" {
    pub fn saucer_window_hide(arg1: *mut saucer_handle);
}
unsafe extern "C" {
    pub fn saucer_window_show(arg1: *mut saucer_handle);
}
unsafe extern "C" {
    pub fn saucer_window_close(arg1: *mut saucer_handle);
}
unsafe extern "C" {
    pub fn saucer_window_focus(arg1: *mut saucer_handle);
}
unsafe extern "C" {
    pub fn saucer_window_start_drag(arg1: *mut saucer_handle);
}
unsafe extern "C" {
    pub fn saucer_window_start_resize(arg1: *mut saucer_handle, edge: SAUCER_WINDOW_EDGE);
}
unsafe extern "C" {
    pub fn saucer_window_set_minimized(arg1: *mut saucer_handle, enabled: bool);
}
unsafe extern "C" {
    pub fn saucer_window_set_maximized(arg1: *mut saucer_handle, enabled: bool);
}
unsafe extern "C" {
    pub fn saucer_window_set_resizable(arg1: *mut saucer_handle, enabled: bool);
}
unsafe extern "C" {
    pub fn saucer_window_set_decorations(arg1: *mut saucer_handle, enabled: bool);
}
unsafe extern "C" {
    pub fn saucer_window_set_always_on_top(arg1: *mut saucer_handle, enabled: bool);
}
unsafe extern "C" {
    pub fn saucer_window_set_click_through(arg1: *mut saucer_handle, enabled: bool);
}
unsafe extern "C" {
    pub fn saucer_window_set_icon(arg1: *mut saucer_handle, icon: *mut saucer_icon);
}
unsafe extern "C" {
    pub fn saucer_window_set_title(arg1: *mut saucer_handle, title: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn saucer_window_set_size(
        arg1: *mut saucer_handle,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int
    );
}
unsafe extern "C" {
    pub fn saucer_window_set_max_size(
        arg1: *mut saucer_handle,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int
    );
}
unsafe extern "C" {
    pub fn saucer_window_set_min_size(
        arg1: *mut saucer_handle,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int
    );
}
unsafe extern "C" {
    pub fn saucer_window_clear(arg1: *mut saucer_handle, event: SAUCER_WINDOW_EVENT);
}
unsafe extern "C" {
    pub fn saucer_window_remove(arg1: *mut saucer_handle, event: SAUCER_WINDOW_EVENT, id: u64);
}
unsafe extern "C" {
    #[doc = " @note See respective comment on events in \"window.h\"\n @warning The icon passed to the @param callback in the `web_event::icon_changed` event must be free'd by the\n user"]
    pub fn saucer_window_once(
        arg1: *mut saucer_handle,
        event: SAUCER_WINDOW_EVENT,
        callback: *mut ::std::os::raw::c_void
    );
}
unsafe extern "C" {
    pub fn saucer_window_once_with_arg(
        arg1: *mut saucer_handle,
        event: SAUCER_WINDOW_EVENT,
        callback: *mut ::std::os::raw::c_void,
        arg: *mut ::std::os::raw::c_void
    );
}
unsafe extern "C" {
    pub fn saucer_window_on(
        arg1: *mut saucer_handle,
        event: SAUCER_WINDOW_EVENT,
        callback: *mut ::std::os::raw::c_void
    ) -> u64;
}
unsafe extern "C" {
    pub fn saucer_window_on_with_arg(
        arg1: *mut saucer_handle,
        event: SAUCER_WINDOW_EVENT,
        callback: *mut ::std::os::raw::c_void,
        arg: *mut ::std::os::raw::c_void
    ) -> u64;
}
pub const SAUCER_SCHEME_ERROR_SAUCER_REQUEST_ERROR_NOT_FOUND: SAUCER_SCHEME_ERROR = 0;
pub const SAUCER_SCHEME_ERROR_SAUCER_REQUEST_ERROR_INVALID: SAUCER_SCHEME_ERROR = 1;
pub const SAUCER_SCHEME_ERROR_SAUCER_REQUEST_ERROR_ABORTED: SAUCER_SCHEME_ERROR = 2;
pub const SAUCER_SCHEME_ERROR_SAUCER_REQUEST_ERROR_DENIED: SAUCER_SCHEME_ERROR = 3;
pub const SAUCER_SCHEME_ERROR_SAUCER_REQUEST_ERROR_FAILED: SAUCER_SCHEME_ERROR = 4;
pub type SAUCER_SCHEME_ERROR = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct saucer_scheme_response {
    _unused: [u8; 0]
}
unsafe extern "C" {
    pub fn saucer_scheme_response_new(
        data: *mut saucer_stash,
        mime: *const ::std::os::raw::c_char
    ) -> *mut saucer_scheme_response;
}
unsafe extern "C" {
    pub fn saucer_scheme_response_free(arg1: *mut saucer_scheme_response);
}
unsafe extern "C" {
    pub fn saucer_scheme_response_set_status(arg1: *mut saucer_scheme_response, status: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn saucer_scheme_response_add_header(
        arg1: *mut saucer_scheme_response,
        header: *const ::std::os::raw::c_char,
        value: *const ::std::os::raw::c_char
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct saucer_scheme_request {
    _unused: [u8; 0]
}
unsafe extern "C" {
    pub fn saucer_scheme_request_free(arg1: *mut saucer_scheme_request);
}
unsafe extern "C" {
    pub fn saucer_scheme_request_url(arg1: *mut saucer_scheme_request) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn saucer_scheme_request_method(arg1: *mut saucer_scheme_request) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn saucer_scheme_request_content(arg1: *mut saucer_scheme_request) -> *mut saucer_stash;
}
unsafe extern "C" {
    #[doc = " @note The arrays pointed to by @param headers and @param values will be populated with strings which are\n themselves dynamically allocated. Both arrays will then hold @param count elements.\n\n To properly free the returned arrays you should:\n - Free all strings within the headers and values array\n - Free the array itself"]
    pub fn saucer_scheme_request_headers(
        arg1: *mut saucer_scheme_request,
        headers: *mut *mut *mut ::std::os::raw::c_char,
        values: *mut *mut *mut ::std::os::raw::c_char,
        count: *mut usize
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct saucer_scheme_executor {
    _unused: [u8; 0]
}
unsafe extern "C" {
    pub fn saucer_scheme_executor_free(arg1: *mut saucer_scheme_executor);
}
unsafe extern "C" {
    pub fn saucer_scheme_executor_resolve(arg1: *mut saucer_scheme_executor, response: *mut saucer_scheme_response);
}
unsafe extern "C" {
    pub fn saucer_scheme_executor_reject(arg1: *mut saucer_scheme_executor, error: SAUCER_SCHEME_ERROR);
}
pub type saucer_scheme_handler = ::std::option::Option<
    unsafe extern "C" fn(arg1: *mut saucer_handle, arg2: *mut saucer_scheme_request, arg3: *mut saucer_scheme_executor)
>;
pub type saucer_scheme_handler_with_arg = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: *mut saucer_handle,
        arg2: *mut saucer_scheme_request,
        arg3: *mut saucer_scheme_executor,
        arg: *mut ::std::os::raw::c_void
    )
>;
pub const SAUCER_LOAD_TIME_SAUCER_LOAD_TIME_CREATION: SAUCER_LOAD_TIME = 0;
pub const SAUCER_LOAD_TIME_SAUCER_LOAD_TIME_READY: SAUCER_LOAD_TIME = 1;
pub type SAUCER_LOAD_TIME = ::std::os::raw::c_int;
pub const SAUCER_WEB_FRAME_SAUCER_WEB_FRAME_TOP: SAUCER_WEB_FRAME = 0;
pub const SAUCER_WEB_FRAME_SAUCER_WEB_FRAME_ALL: SAUCER_WEB_FRAME = 1;
pub type SAUCER_WEB_FRAME = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct saucer_script {
    _unused: [u8; 0]
}
unsafe extern "C" {
    pub fn saucer_script_new(code: *const ::std::os::raw::c_char, time: SAUCER_LOAD_TIME) -> *mut saucer_script;
}
unsafe extern "C" {
    pub fn saucer_script_free(arg1: *mut saucer_script);
}
unsafe extern "C" {
    pub fn saucer_script_set_frame(arg1: *mut saucer_script, frame: SAUCER_WEB_FRAME);
}
unsafe extern "C" {
    pub fn saucer_script_set_time(arg1: *mut saucer_script, time: SAUCER_LOAD_TIME);
}
unsafe extern "C" {
    pub fn saucer_script_set_permanent(arg1: *mut saucer_script, permanent: bool);
}
unsafe extern "C" {
    pub fn saucer_script_set_code(arg1: *mut saucer_script, code: *const ::std::os::raw::c_char);
}
pub const SAUCER_WEB_EVENT_SAUCER_WEB_EVENT_DOM_READY: SAUCER_WEB_EVENT = 0;
pub const SAUCER_WEB_EVENT_SAUCER_WEB_EVENT_NAVIGATED: SAUCER_WEB_EVENT = 1;
pub const SAUCER_WEB_EVENT_SAUCER_WEB_EVENT_NAVIGATE: SAUCER_WEB_EVENT = 2;
pub const SAUCER_WEB_EVENT_SAUCER_WEB_EVENT_FAVICON: SAUCER_WEB_EVENT = 3;
pub const SAUCER_WEB_EVENT_SAUCER_WEB_EVENT_TITLE: SAUCER_WEB_EVENT = 4;
pub const SAUCER_WEB_EVENT_SAUCER_WEB_EVENT_LOAD: SAUCER_WEB_EVENT = 5;
pub type SAUCER_WEB_EVENT = ::std::os::raw::c_int;
pub const SAUCER_STATE_SAUCER_STATE_STARTED: SAUCER_STATE = 0;
pub const SAUCER_STATE_SAUCER_STATE_FINISHED: SAUCER_STATE = 1;
pub type SAUCER_STATE = ::std::os::raw::c_int;
pub const SAUCER_LAUNCH_SAUCER_LAUNCH_SYNC: SAUCER_LAUNCH = 0;
pub const SAUCER_LAUNCH_SAUCER_LAUNCH_ASYNC: SAUCER_LAUNCH = 1;
pub type SAUCER_LAUNCH = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct saucer_embedded_file {
    _unused: [u8; 0]
}
unsafe extern "C" {
    pub fn saucer_embed(content: *mut saucer_stash, mime: *const ::std::os::raw::c_char) -> *mut saucer_embedded_file;
}
unsafe extern "C" {
    pub fn saucer_embed_free(arg1: *mut saucer_embedded_file);
}
unsafe extern "C" {
    pub fn saucer_new(prefs: *mut saucer_preferences) -> *mut saucer_handle;
}
unsafe extern "C" {
    pub fn saucer_free(arg1: *mut saucer_handle);
}
pub type saucer_on_message = ::std::option::Option<unsafe extern "C" fn(arg1: *const ::std::os::raw::c_char) -> bool>;
unsafe extern "C" {
    pub fn saucer_webview_on_message(arg1: *mut saucer_handle, callback: saucer_on_message);
}
pub type saucer_on_message_with_arg = ::std::option::Option<
    unsafe extern "C" fn(arg1: *const ::std::os::raw::c_char, arg2: *mut ::std::os::raw::c_void) -> bool
>;
unsafe extern "C" {
    pub fn saucer_webview_on_message_with_arg(
        arg1: *mut saucer_handle,
        callback: saucer_on_message_with_arg,
        arg: *mut ::std::os::raw::c_void
    );
}
unsafe extern "C" {
    pub fn saucer_webview_favicon(arg1: *mut saucer_handle) -> *mut saucer_icon;
}
unsafe extern "C" {
    pub fn saucer_webview_page_title(arg1: *mut saucer_handle) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn saucer_webview_dev_tools(arg1: *mut saucer_handle) -> bool;
}
unsafe extern "C" {
    pub fn saucer_webview_url(arg1: *mut saucer_handle) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn saucer_webview_context_menu(arg1: *mut saucer_handle) -> bool;
}
unsafe extern "C" {
    pub fn saucer_webview_background(arg1: *mut saucer_handle, r: *mut u8, g: *mut u8, b: *mut u8, a: *mut u8);
}
unsafe extern "C" {
    pub fn saucer_webview_force_dark_mode(arg1: *mut saucer_handle) -> bool;
}
unsafe extern "C" {
    pub fn saucer_webview_set_dev_tools(arg1: *mut saucer_handle, enabled: bool);
}
unsafe extern "C" {
    pub fn saucer_webview_set_context_menu(arg1: *mut saucer_handle, enabled: bool);
}
unsafe extern "C" {
    pub fn saucer_webview_set_force_dark_mode(arg1: *mut saucer_handle, enabled: bool);
}
unsafe extern "C" {
    pub fn saucer_webview_set_background(arg1: *mut saucer_handle, r: u8, g: u8, b: u8, a: u8);
}
unsafe extern "C" {
    pub fn saucer_webview_set_file(arg1: *mut saucer_handle, file: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn saucer_webview_set_url(arg1: *mut saucer_handle, url: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn saucer_webview_back(arg1: *mut saucer_handle);
}
unsafe extern "C" {
    pub fn saucer_webview_forward(arg1: *mut saucer_handle);
}
unsafe extern "C" {
    pub fn saucer_webview_reload(arg1: *mut saucer_handle);
}
